// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`utils .getArgs should parse the args 1`] = `
Object {
  "nodeBin": "/path/to/node",
  "runCfgPath": "./tests/kitchen-sink-tests/sauce-runner.json",
  "suiteName": "kitchen-sink-1",
}
`;

exports[`utils .getEnv should parse env variables from runConfig 1`] = `
Object {
  "A": "1",
  "B": "2",
  "C": "3",
  "HELLO": "WORLD",
}
`;

exports[`utils .prepareNpmEnv should be able to set cafile 1`] = `
Array [
  Object {
    "nodePath": "node-bin",
    "npmPath": "npm-bin",
  },
  Object {
    "audit": false,
    "cafile": "/fake/path",
    "fund": false,
    "json": false,
    "noproxy": "registry.npmjs.org",
    "package-lock": false,
    "registry": "test.cafile",
    "save": false,
    "strict-ssl": true,
  },
]
`;

exports[`utils .prepareNpmEnv should be able to set strictSSL to false 1`] = `
Array [
  Object {
    "nodePath": "node-bin",
    "npmPath": "npm-bin",
  },
  Object {
    "audit": false,
    "cafile": null,
    "fund": false,
    "json": false,
    "noproxy": "registry.npmjs.org",
    "package-lock": false,
    "registry": "test.strictSSL.false",
    "save": false,
    "strict-ssl": false,
  },
]
`;

exports[`utils .prepareNpmEnv should be able to set strictSSL to true 1`] = `
Array [
  Object {
    "nodePath": "node-bin",
    "npmPath": "npm-bin",
  },
  Object {
    "audit": false,
    "cafile": null,
    "fund": false,
    "json": false,
    "noproxy": "registry.npmjs.org",
    "package-lock": false,
    "registry": "test.strictSSL.true",
    "save": false,
    "strict-ssl": true,
  },
]
`;

exports[`utils .prepareNpmEnv should call npm install 1`] = `
Array [
  Object {
    "nodePath": "node-bin",
    "npmPath": "npm-bin",
  },
  Object {
    "mypackage": "1.2.3",
  },
]
`;

exports[`utils .prepareNpmEnv should set right registry for npm 1`] = `
Array [
  Object {
    "nodePath": "node-bin",
    "npmPath": "npm-bin",
  },
  Object {
    "audit": false,
    "cafile": null,
    "fund": false,
    "json": false,
    "noproxy": "registry.npmjs.org",
    "package-lock": false,
    "registry": "my.registry",
    "save": false,
    "strict-ssl": true,
  },
]
`;

exports[`utils .prepareNpmEnv should use default registry 1`] = `
Array [
  Object {
    "nodePath": "node-bin",
    "npmPath": "npm-bin",
  },
  Object {
    "audit": false,
    "cafile": null,
    "fund": false,
    "json": false,
    "noproxy": "registry.npmjs.org",
    "package-lock": false,
    "registry": "https://registry.npmjs.org",
    "save": false,
    "strict-ssl": true,
  },
]
`;

exports[`utils .prepareNpmEnv should use env var for registry 1`] = `
Array [
  Object {
    "nodePath": "node-bin",
    "npmPath": "npm-bin",
  },
  Object {
    "audit": false,
    "cafile": null,
    "fund": false,
    "json": false,
    "noproxy": "registry.npmjs.org",
    "package-lock": false,
    "registry": "npmland.io",
    "save": false,
    "strict-ssl": true,
  },
]
`;

exports[`utils .prepareNpmEnv should use rebuild node_modules 1`] = `
Array [
  Object {
    "nodePath": "node-bin",
    "npmPath": "npm-bin",
  },
  "--prefix",
  "/fake/runner",
]
`;

exports[`utils .prepareNpmEnv should use rebuild node_modules when not package installed 1`] = `
Array [
  Object {
    "nodePath": "node-bin",
    "npmPath": "npm-bin",
  },
  "--prefix",
  "/fake/runner",
]
`;

exports[`utils .prepareNpmEnv should use true as the default value for strictSSL 1`] = `
Array [
  Object {
    "nodePath": "node-bin",
    "npmPath": "npm-bin",
  },
  Object {
    "audit": false,
    "cafile": null,
    "fund": false,
    "json": false,
    "noproxy": "registry.npmjs.org",
    "package-lock": false,
    "registry": "https://registry.npmjs.org",
    "save": false,
    "strict-ssl": true,
  },
]
`;

exports[`utils .prepareNpmEnv should use true as the default value for strictSSL if it's null in cfg 1`] = `
Array [
  Object {
    "nodePath": "node-bin",
    "npmPath": "npm-bin",
  },
  Object {
    "audit": false,
    "cafile": null,
    "fund": false,
    "json": false,
    "noproxy": "registry.npmjs.org",
    "package-lock": false,
    "registry": "https://registry.npmjs.org",
    "save": false,
    "strict-ssl": true,
  },
]
`;

exports[`utils .prepareNpmEnv should use user registry 1`] = `
Array [
  Object {
    "nodePath": "node-bin",
    "npmPath": "npm-bin",
  },
  Object {
    "audit": false,
    "cafile": null,
    "fund": false,
    "json": false,
    "noproxy": "registry.npmjs.org",
    "package-lock": false,
    "registry": "registryland.io",
    "save": false,
    "strict-ssl": true,
  },
]
`;
